# http_proxy

./: .gitignore  CMakeLists.txt  README.md
admin_client/: CMakeLists.txt  compile.sh  new_module.sh
admin_client/src/: CMakeLists.txt  main.c  main.c.bak1
admin_client/src/actions/: CMakeLists.txt  actions.c
admin_client/src/handlers/: CMakeLists.txt  handlers.c
admin_client/src/include/actions/: actions.h
admin_client/src/include/handlers/: handlers.h
admin_client/src/include/messages/: messages.h
admin_client/src/include/msg_queue/: msg_queue.h
admin_client/src/include/print_queue/: print_queue.h
admin_client/src/include/protocol/: protocol.h
admin_client/src/include/serializer/: serializer.h
admin_client/src/messages/: CMakeLists.txt  messages.c
admin_client/src/msg_queue/: msg_queue.c
admin_client/src/print_queue/: CMakeLists.txt  print_queue.c
admin_client/src/serializer/: serializer.c
docs/: agregar_modulos.md  client.md  config.md  metrics.md  protocolo.md  selector.md  tpe-20181_rev0.txt
proxy_http/: CMakeLists.txt  compile.sh  new_module.sh
proxy_http/src/: CMakeLists.txt  FindSCTP.cmake  main.c
proxy_http/src/admin_actions/: CMakeLists.txt  admin_actions.c
proxy_http/src/admin_handlers/: CMakeLists.txt  admin_handlers.c
proxy_http/src/argument/: CMakeLists.txt  argument.c
proxy_http/src/buffer/: CMakeLists.txt  buffer.c  buffer.h
proxy_http/src/client/: CMakeLists.txt  chunks.c  client.c  client_handlers.c  client_private.h  remote_handlers.c  remote_handlers.h  transformation_handlers.c  transformation_handlers.h
proxy_http/src/config/: config.c
proxy_http/src/http_responses/: CMakeLists.txt  http_responses.c  http_responses_templates.h
proxy_http/src/include/admin_actions/: admin_actions.h
proxy_http/src/include/admin_handlers/: admin_handlers.h
proxy_http/src/include/argument/: argument.h
proxy_http/src/include/buffer/: buffer.h
proxy_http/src/include/client/: client.h
proxy_http/src/include/config/: config.h
proxy_http/src/include/http_responses/: http_responses.h
proxy_http/src/include/limits/: limits.h
proxy_http/src/include/logger/: logger.h
proxy_http/src/include/messages/: messages.h
proxy_http/src/include/metric/: metric.h
proxy_http/src/include/msg_queue/: msg_queue.h
proxy_http/src/include/myParserUtils/: myParserUtils.h
proxy_http/src/include/protocol/: protocol.h
proxy_http/src/include/request-response-parser/: httpRequest.h  parserUtils.h
proxy_http/src/include/requestParser/: requestParser.h
proxy_http/src/include/request_parser/: request_parser.h
proxy_http/src/include/responseParser/: responseParser.h
proxy_http/src/include/response_parser/: response_parser.h
proxy_http/src/include/selector/: selector.h
proxy_http/src/include/serializer/: serializer.h
proxy_http/src/include/string/: mystring.h
proxy_http/src/include/transformations/: transformations.h
proxy_http/src/logger/: CMakeLists.txt  logger.c
proxy_http/src/management/: CMakeLists.txt  management.c  management.h
proxy_http/src/messages/: CMakeLists.txt  messages.c
proxy_http/src/metric/: CMakeLists.txt  metric.c
proxy_http/src/msg_queue/: msg_queue.c
proxy_http/src/myParserUtils/: CMakeLists.txt  myParserUtils.c
proxy_http/src/request-response-parser/: CMakeLists.txt  httpRequest.c  httpRequest.h  httpResponse.c  httpResponse.h  parserUtils.c  parserUtils.h
proxy_http/src/requestParser/: CMakeLists.txt  requestParser.c
proxy_http/src/request_parser/: CMakeLists.txt  dummy_parser.c  dummy_request_parser.c  requestParser.c  request_parser.c  request_parser_private.h  request_parser_utils.c
proxy_http/src/responseParser/: CMakeLists.txt  responseParser.c
proxy_http/src/response_parser/: CMakeLists.txt  dummy_response_parser.c  responseParser.c  response_parser.c  response_parser_private.h  response_parser_utils.c
proxy_http/src/selector/: CMakeLists.txt  selector.c
proxy_http/src/serializer/: CMakeLists.txt  serializer.c
proxy_http/src/string/: CMakeLists.txt  mystring.c
proxy_http/src/tests/: CMakeLists.txt  bufferTest.c  httpRequestTest.c  httpResponseTest.c  http_responses_test.c  myParserUtilsTest.c  parserUtilsTest.c  requestParserTest.c  responseParserTest.c  response_parser_test.c  transformation_test.c
proxy_http/src/transformations/: CMakeLists.txt  transformations.c
sctp_server/: CMakeLists.txt  main.c
sctp_server/actions/: CMakeLists.txt  actions.c  actions.h
sctp_server/config/: CMakeLists.txt  config.c
sctp_server/handlers/: CMakeLists.txt  handlers.c  handlers.h
sctp_server/messages/: messages.c  messages.h
sctp_server/metric/: metric.c  metric.h
sctp_server/msg_queue/: CMakeLists.txt  msg_queue.c  msg_queue.h
sctp_server/protocol/: protocol.h
sctp_server/selector/: selector.c
sctp_server/serializer/: serializer.c
